# snow17

./: .gitignore  CHANGELOG.md  CMakeLists.txt  INSTALL.md  LICENSE  NGEN_EXAMPLE.md  README.md  snow17bmi.pc.in  version.txt
.github/workflows/: add_to_project.yml
configs/: example_bmi_multi_realization_config_w_snow17.json  snow17-init-cat-27.namelist.input
src/bmi/: bmi.f90  bmi_snow17.f90
src/driver/: asciiReadModule.f90  driver_bmi.f90  mult_fileunits.txt  multi_driver.f90  multi_driver.orig.f90  multi_driver_edited.f90  namelistModule.f90  noah-owp-modular.lnk  runSnow17.f90
src/ncar_sharp_orig/Snow17SacUH/src_bin/driver/: multi_driver.f90
src/share/: ascii_io.f90  constants.f90  dateTimeUtilsModule.f90  dateTimeUtilsModulef90  def_namelists.f90  forcingModule.f90  forcingType.f90  interfaces.f90  ioModule.f90  messagepack_value.f90  modelVarType.f90  namelistModule.f90  parametersModule.f90  parametersType.f90  paramsModule.f90  paramsType.f90  read_namelist.f90.not_used  runInfoType.f90  runSnow17.f90  sfc_pressure.f90  snowLogger.f90  test_backspace.f90
src/snow19/: PACK19.f  adjc19.f  aeco19.f  exsnow19.f  updt19.f  zero19.f
src/test/: Makefile  README.md
test_cases/: ex1.tgz
test_cases/ex1/input/forcing/: README
test_cases/ex1/input/forcing_bmi/: forcing.snow17bmi.HHWM8IL  forcing.snow17bmi.HHWM8IU  forcing_pet.mixed_ens.HHWM8IL  forcing_pet.mixed_ens.HHWM8IU
test_cases/ex1/input/params/: snow17_params.HHWM8.txt
test_cases/ex1/output/: README  output.snow17bmi.txt.HHWM8  snowout.txt.HHWM8
test_cases/ex1/run/: namelist.HHWM8  namelist.bmi.HHWM8  runSnow17.csh
test_cases/unit_test/: Makefile  README.md  snow17_driver_test.f90
